WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258482
scroll corner painting ignores color-scheme when overflow scroll
https://bugs.webkit.org/show_bug.cgi?id=258482
Summary
scroll corner painting ignores color-scheme when overflow scroll
Luke Warlow
Reported
2023-06-23 15:02:48 PDT
Enable Always On Scrollbars on MacOS Load
https://jsfiddle.net/z2da3hec/17/
You will see that it renders almost entirely blue except for the scroll corner which renders plain white. I would expect it to be colour matched to the scrollbar track colour.
Attachments
Add attachment
proposed patch, testcase, etc.
Luke Warlow
Comment 1
2023-06-23 15:06:21 PDT
It's worth noting this only appears to be an issue with overflow: scroll. When actual scrollbars render the scroll corner correctly matches the track colour. (Not fully dynamically but I will raise a separate issue for that)
Radar WebKit Bug Importer
Comment 2
2023-06-30 15:03:21 PDT
<
rdar://problem/111589846
>
Luke Warlow
Comment 3
2023-07-01 05:45:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15476
EWS
Comment 4
2023-07-01 10:32:10 PDT
Committed
265687@main
(4498c483beb9): <
https://commits.webkit.org/265687@main
> Reviewed commits have been landed. Closing PR #15476 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug