Scroll corner painting ignores color-scheme when overflow: scroll https://bugs.webkit.org/show_bug.cgi?id=258482

Reviewed by Aditya Keerthi.

Update the local appearance value before painting Mac scroll corner.

This means that the color-scheme is correctly accounted for when painting the scroll corner for both frame views and scrollable areas.

* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::paintScrollCorner):
* Source/WebCore/platform/mac/ScrollbarThemeMac.mm:
(WebCore::ScrollbarThemeMac::paintScrollCorner):

Canonical link: https://commits.webkit.org/265687@main